# stac

./: .gitignore  CONTEXT.md  GEMINI.md  README.md  earth_lake.py  lake_footprint.py  lake_monitor.py  lake_preview.py  monitor_task.py  pyproject.toml  reindex_lake.py  stac_api.py  stac_core.py
.agents/skills/stac_downloader/: SKILL.md
.agents/skills/stac_downloader/scripts/: stac_tool.py
acquisition/: __init__.py  manager.py  models.py  store.py
frontend/: app.js  index.html  styles.css
tests/: test_acquisition.py  test_earth_lake.py  test_lake_monitor.py  test_stac_core.py
