[project]
name = "stac"
version = "0.1.0"
description = "CLI and FastAPI service for searching and downloading STAC and NASA CMR data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "numpy>=2.0.0",
    "planetary-computer>=1.0.0",
    "pyarrow>=20.0.0",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
    "requests>=2.33.1",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
    "uvicorn>=0.44.0",
]
